--- a/security.html
+++ b/security.html
@@ -47,7 +47,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/limebike/a0a3ed49-2294-49d5-b9f7-0fa577025343'>Lime - Security Analyst</a></h5> 
+<h5><a href='https://jobs.lever.co/limebike/a0a3ed49-2294-49d5-b9f7-0fa577025343'>Lime - Security Analyst</a></h5> 
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -55,7 +55,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/GBM1/743999687702856-cloud-security-engineer-aws-'>GBM Cloud Security Engineer (AWS) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/GBM1/743999687702856-cloud-security-engineer-aws-'>GBM Cloud Security Engineer (AWS) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -91,7 +91,7 @@
 <p><span class="badge badge-light">Indianapolis, IN</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/WabashValleyPower/743999689407037-senior-cyber-security-analyst'>Wabash Valley Power Senior Cyber Security Analyst | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/WabashValleyPower/743999689407037-senior-cyber-security-analyst'>Wabash Valley Power Senior Cyber Security Analyst | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Indianapolis, IN</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -101,7 +101,7 @@
 performance of research-related tasks, including data collection, manipulation 
 and?...</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/curriculumassociates/job/ozzCafwE'>Curriculum Associates Careers - Infrastructure Security Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/curriculumassociates/job/ozzCafwE'>Curriculum Associates Careers - Infrastructure Security Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -170,7 +170,7 @@ tackling?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://mitre.referrals.selectminds.com/jobs/cyber-security-data-analytics-engineer-6495'>Cyber Security Data Analytics Engineer - MITRE Careers</a></h5> 
+<h5><a href='https://mitre.referrals.selectminds.com/jobs/cyber-security-data-analytics-engineer-6495'>Cyber Security Data Analytics Engineer - MITRE Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>2 days ago ... Combine CyberSecurity domain expertise and contemporary data science skills 
 to enhance cyber adversary detection, network defense, and SOC process?...</p>
@@ -183,7 +183,7 @@ to enhance cyber adversary detection, network defense, and SOC process?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<h5><a href='https://zycus-1.workable.com/j/0AB165E01E'>Zycus - Jobs: Application Security Architect (Java) - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://zycus-1.workable.com/j/0AB165E01E'>Zycus - Jobs: Application Security Architect (Java) - Apply online</a></h5> 
 <p><span class="badge badge-light">Maharashtra, India</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -191,7 +191,7 @@ to enhance cyber adversary detection, network defense, and SOC process?...</p>
 <p><span class="badge badge-light">Karnataka, India</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/ComputerConsultantsInternational1/743999692279993-business-security-analyst-job-id-602170-'>Computer Consultants International, Inc. Business Security Analyst (Job ID: 602170) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/ComputerConsultantsInternational1/743999692279993-business-security-analyst-job-id-602170-'>Computer Consultants International, Inc. Business Security Analyst (Job ID: 602170) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -249,7 +249,7 @@ senior Network and Security engineer to deliver network and security services to
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/curology/jobs/1791412'>Job Application for Sr. DevOps Security Engineer  at Curology</a></h5> 
+<h5><a href='https://boards.greenhouse.io/curology/jobs/1791412'>Job Application for Sr. DevOps Security Engineer  at Curology</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -269,11 +269,11 @@ senior Network and Security engineer to deliver network and security services to
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://talent-acquisition-concepts.breezy.hr/p/fee5c63297e9-it-network-security-engineer'>IT Network Security Engineer at Talent Acquisition Concepts</a></h5> 
+<h5><a href='https://talent-acquisition-concepts.breezy.hr/p/fee5c63297e9-it-network-security-engineer'>IT Network Security Engineer at Talent Acquisition Concepts</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/AroghiaGroup/743999692214887-expert-cloud-security-architect-for-global-retail-sportswear-client'>Aroghia Group Expert Cloud Security Architect for Global Retail Sportswear Client | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/AroghiaGroup/743999692214887-expert-cloud-security-architect-for-global-retail-sportswear-client'>Aroghia Group Expert Cloud Security Architect for Global Retail Sportswear Client | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -333,7 +333,7 @@ Tue 23rd July (reissue) at EMW, Inc.</p>
 <p><span class="badge badge-light">Singapore, Singapore</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/genesys/job/5nzbcrs18w49a8zboipkfa5bph'>Application Security Engineer | GENESYS Consulting Services, Inc.</a></h5> 
+<h5><a href='https://jobs.crelate.com/portal/genesys/job/5nzbcrs18w49a8zboipkfa5bph'>Application Security Engineer | GENESYS Consulting Services, Inc.</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -376,7 +376,7 @@ new?...</p>
 <p>Jul 9, 2019 ... Raleigh, NC is now hiring a Expert Security Engineer in Raleigh, North Carolina. 
 Review all of the job details and apply today!</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers-berkley.icims.com/jobs/2109/splunk-security-automation-metrics-engineer/job'>Splunk Security Automation Metrics Engineer in Wilmington ...</a></h5> 
+<h5><a href='https://careers-berkley.icims.com/jobs/2109/splunk-security-automation-metrics-engineer/job'>Splunk Security Automation Metrics Engineer in Wilmington ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>5 days ago ... DE, Wilmington is now hiring a Splunk Security Automation Metrics Engineer in 
 Wilmington, Delaware. Review all of the job details and apply today!</p>
@@ -401,7 +401,7 @@ Wilmington, Delaware. Review all of the job details and apply today!</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='https://jobs.crelate.com/portal/sundial/job/5d3jds6rn5a3dp6y17g365zs4h'>State of WI - DHS - Security Patch/Software Engineer 2 (16117) | Sundial Software Career Opportunities</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/sundial/job/5d3jds6rn5a3dp6y17g365zs4h'>State of WI - DHS - Security Patch/Software Engineer 2 (16117) | Sundial Software Career Opportunities</a></h5> 
 <p><span class="badge badge-light">Madison, WI</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -411,7 +411,7 @@ Wilmington, Delaware. Review all of the job details and apply today!</p>
 Richardson Operations Center, Texas. Review all of the job details and apply 
 today!</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/jfrstaffing/job/17pcjkkwnycascoxode3pir1pa'>Application Security Engineer | JFR Staffing</a></h5> 
+<h5><a href='https://jobs.crelate.com/portal/jfrstaffing/job/17pcjkkwnycascoxode3pir1pa'>Application Security Engineer | JFR Staffing</a></h5> 
 <p><span class="badge badge-light">Atlanta</span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
@@ -431,7 +431,7 @@ today!</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Playtech/743999692112743-security-devops-engineer-013860-'>Playtech Security DevOps Engineer [013860] | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Playtech/743999692112743-security-devops-engineer-013860-'>Playtech Security DevOps Engineer [013860] | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Kyiv, Ukraine</span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
@@ -451,7 +451,7 @@ today!</p>
 <p><span class="badge badge-light">Edinburgh</span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://bah.wd1.myworkdayjobs.com/BAH_Jobs/job/USA-VA-Springfield-7200-Barta-Rd/Cybersecurity-Analyst_R0060113-1'>Cybersecurity Analyst</a></h5> 
+<h5><a href='https://bah.wd1.myworkdayjobs.com/BAH_Jobs/job/USA-VA-Springfield-7200-Barta-Rd/Cybersecurity-Analyst_R0060113-1'>Cybersecurity Analyst</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>4 days ago ... Cybersecurity Analyst. Key Role: Provide detection, identification, and reporting 
 of possible Cyber-attacks and intrusions, anomalous activities, and misuse?...</p>
